--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
     "description": "Provides data about the source you're reading from mediabiasfactcheck.com",
     "manifest_version": 3,
     "author": "Nicholas Lediet",
+    "permissions": ["scripting", "activeTab"],
     "action":{
         "default_popup": "index.html",
         "default_title": "Media Bias/Fact Check Data"
