--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/NickLediet/mfcb-extension/issues"
   },
-  "homepage": "https://github.com/NickLediet/mfcb-extension#readme"
+  "homepage": "https://github.com/NickLediet/mfcb-extension#readme",
+  "dependencies": {
+    "lit": "^3.0.2"
+  }
 }
