--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "A browser extension that injects mediabiasfactcheck.com data into the top of an article with questionable accuracy. ",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "sh build.sh",
     "preview": "vite preview"
   },
   "repository": {
@@ -20,6 +21,7 @@
   "homepage": "https://github.com/NickLediet/mfcb-extension#readme",
   "dependencies": {
     "@types/chrome": "^0.0.251",
+    "js-string-escape": "^1.0.1",
     "lit": "^2.7.6"
   },
   "devDependencies": {
