--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,13 +4,14 @@
     "description": "Provides data about the source you're reading from mediabiasfactcheck.com",
     "manifest_version": 3,
     "author": "Nicholas Lediet",
-    "permissions": ["scripting", "activeTab", "web_accessible_resources"],
+    "permissions": ["scripting", "activeTab", "web_accessible_resources", "nativeMessaging", "tabs"],
     "action":{
         "default_popup": "popup.html",
         "default_title": "Media Bias/Fact Check Data"
     },
     "content_scripts": [{
         "matches": ["<all_urls>"],
-        "js": ["index.js"]
+        "js": ["content-script.js"],
+        "run_at": "document_start"
     }]
 }
